# gaphor_plugin_helloworld

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  codeql.yml  scorecards.yml
gaphor/: __init__.py
gaphor/plugins/helloworld/: __init__.py
gaphor_helloworld_plugin/: __init__.py
tests/: test_plugin.py
