[tool.poetry]
name = "gaphor_helloworld_plugin"
version = "0.1.0"
description = "Example (Hello World) service/plugin for Gaphor"
authors = [
    "Arjan J. Molenaar <gaphor@gmail.com>",
    "Dan Yeaw <dan@yeaw.me>"
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["gaphor", "hello world", "example", "examples"]

[tool.poetry.dependencies]
python = "^3.8"
gaphor = "^2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."gaphor.services"]
"helloworld" = "gaphor_helloworld_plugin:HelloWorldPlugin"

[build-system]
requires = ["poetry==1.0.10"]
build-backend = "poetry.masonry.api"
